--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.github.com/stanmancer">Stanmancer</a>.
+    Coded by <a href="https://www.github.com/stanmancer" target="_blank">Stanmancer</a>.
   </div>
 </body>
 <script src="script.js"></script>
